@@ -7,12 +7,16 @@ The format is based on [[http://keepachangelog.com][Keep a Changelog]] and this 
 
 ** [[https://github.com/sergeyklay/bnf-mode/compare/0.1.0...HEAD][Unreleased]]
 
+*** Changed
+- LHS nonterminals may be preceded by an unlimited number of spaces
+- Regarding to [[https://tools.ietf.org/html/rfc5234#section-2.1][RFC5234#2.1]] angle brackets to use for nonterminals are optional
+
 ** 0.2.0 - 2019-03-16
 *** Changed
-- Comments are no longer use syntax table.  For more see `comment-use-syntax'.
+- Comments are no longer use syntax table.  For more see `comment-use-syntax'
 
 *** Fixed
-- Changed comment syntax from ~#~ to ~;~ to follow [[https://tools.ietf.org/html/rfc822#section-2.8][RFC822#2.8]] .
+- Changed comment syntax from ~#~ to ~;~ to follow [[https://tools.ietf.org/html/rfc822#section-2.8][RFC822#2.8]]
 
 ** 0.1.0 - 2019-03-16
 *** Added
